# StickerGenerator

./: CMakeLists.txt
src/: main.cpp  opencvimageprovider.cpp  opencvimageprovider.h  pagemanager.cpp  pagemanager.h  resizablesticker.cpp  resizablesticker.h  resources.qrc  stickermanager.cpp  stickermanager.h
src/generator/: page.cpp  page.h  sticker.cpp  sticker.h
src/view/: AddStickerPanel.qml  ImagePanel.qml  ManagePanel.qml  Menu.qml  main.qml
src/view/CustomComponents/: CustomButton.qml  CustomLabel.qml  CustomTextField.qml  ResizableComponent.qml
